# agnt

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  THREAT_MODEL.md  bench.sh
agents/_schema/: agent.toml.md
agents/aria/: agent.toml  principles.md  system.md
agents/diagnostic/: agent.toml  principles.md  system.md
agents/sage/: agent.toml  principles.md  system.md
agnt-core/: Cargo.toml
agnt-core/src/: agent.rs  backend.rs  builtins.rs  http.rs  lib.rs  store.rs  tool.rs
crates/agnt/: Cargo.toml  README.md
crates/agnt-bridge/: Cargo.toml
crates/agnt-bridge-tools/: Cargo.toml  README.md
crates/agnt-bridge-tools/src/: computer.rs  desktop.rs  dispatch.rs  lib.rs  memory.rs  retrieval.rs  search.rs  shell.rs  vault.rs  vision.rs
crates/agnt-bridge-tools/tests/: dispatch_loopback.rs
crates/agnt-bridge/src/: config.rs  dispatch.rs  harmony.rs  lib.rs  main.rs  prompt.rs
crates/agnt-bridge/tests/: live_cycle.rs  multiturn_session.rs  streaming_cycle.rs
crates/agnt-core/: Cargo.toml  README.md
crates/agnt-core/benches/: agent_step.rs  windowing.rs
crates/agnt-core/src/: agent.rs  backend_trait.rs  builder.rs  lib.rs  message.rs  observer.rs  store_trait.rs  tool.rs  wire.rs
crates/agnt-dmn/: Cargo.toml
crates/agnt-dmn/src/: config.rs  handlers.rs  main.rs  middleware.rs  state.rs
crates/agnt-engine/: Cargo.toml
crates/agnt-engine/src/: cron.rs  engine.rs  lib.rs  observer.rs  task.rs
crates/agnt-eval/: Cargo.toml
crates/agnt-eval/src/: main.rs
crates/agnt-macros/: Cargo.toml  README.md
crates/agnt-macros/src/: lib.rs
crates/agnt-macros/tests/: ui.rs
crates/agnt-mcp/: Cargo.toml  README.md
crates/agnt-mcp/src/: lib.rs
crates/agnt-net/: Cargo.toml  README.md
crates/agnt-net/src/: backend.rs  http.rs  lib.rs
crates/agnt-store/: Cargo.toml  README.md
crates/agnt-store/src/: lib.rs  store.rs
crates/agnt-toolgnrtr/: Cargo.toml
crates/agnt-toolgnrtr/src/: generator.rs  lib.rs  main.rs  script_tool.rs  store.rs  wasm_compile.rs
crates/agnt-toolgnrtr/tests/: wasm_roundtrip.rs
crates/agnt-tools/: Cargo.toml  README.md
crates/agnt-tools/src/: builtins.rs  http.rs  lib.rs  sandbox.rs  ssrf.rs  system.rs
crates/agnt/src/: lib.rs
crates/cc-bridge/: Cargo.toml
crates/cc-bridge/src/: config.rs  cost.rs  dispatch.rs  lib.rs  main.rs  runner.rs
crates/cc-bridge/tests/: live_cycle.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_anthropic_sse.rs  fuzz_fetch_ssrf.rs  fuzz_filesystem_root_resolve.rs  fuzz_glob_pattern.rs  fuzz_openai_sse.rs  fuzz_ssrf_resolver.rs  fuzz_tool_call_dispatch.rs
src/: main.rs
