[workspace]
members = [
    "crates/agnt-core",
    "crates/agnt-net",
    "crates/agnt-store",
    "crates/agnt-tools",
    "crates/agnt-macros",
    "crates/agnt-mcp",
    "crates/agnt",
    "crates/agnt-dmn",
    "crates/agnt-engine",
    "crates/agnt-bridge",
    "crates/agnt-bridge-tools",
    "crates/cc-bridge",
    "crates/agnt-toolgnrtr",
    ".",
]

[package]
name = "agnt-rs"
version = "0.3.2"
edition = "2021"
description = "REPL binary example consumer of the agnt library"

[dependencies]
agnt = { path = "crates/agnt" }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
