[package]
name = "agnt-bridge-tools"
description = "System-level tools for agnt-bridge — open_app, web_search, screenshots, clipboard, memctl, dispatch_agent."
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["doop <johnnyendrihs@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hmbldv/voicectl"

[lib]
name = "agnt_bridge_tools"
path = "src/lib.rs"

[dependencies]
# agnt-rs traits + macro
agnt = { path = "../agnt", default-features = false, features = ["net", "tools", "macros"] }
agnt-core = { path = "../agnt-core" }

# voicectl integration (for the NATS Bus type used by dispatch_agent)
voicectl-core = { path = "../../../../voicectl/main/crates/voicectl-core" }
voicectl-net = { path = "../../../../voicectl/main/crates/voicectl-net" }

# vzn vision-dispatch wire types
vzn-core = { path = "../../../../vzn/main/crates/vzn-core" }

# core data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async + http
tokio = { version = "1", features = ["process", "rt", "rt-multi-thread", "time", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
url = "2"
async-nats = "0.38"
futures = "0.3"

# misc
anyhow = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
