[package]
name = "agnt-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["doop"]
description = "Zero-I/O kernel for the agnt agent runtime — traits, message types, agent loop. No async runtime required."
repository = "https://github.com/hmbldv/agnt"
homepage = "https://github.com/hmbldv/agnt"
documentation = "https://docs.rs/agnt-core"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["agent", "llm", "ai", "trait"]
categories = ["api-bindings"]

[lib]
name = "agnt_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "windowing"
harness = false

[[bench]]
name = "agent_step"
harness = false
