[package]
name = "agnt-dmn"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Edge daemon wrapping agnt-core in an HTTP server for multi-machine agent workflows"
license = "MIT OR Apache-2.0"

[features]
engine = ["dep:agnt-engine"]

[dependencies]
agnt-core = { path = "../agnt-core" }
agnt-engine = { path = "../agnt-engine", optional = true }
agnt-net = { path = "../agnt-net" }
agnt-store = { path = "../agnt-store" }
agnt-tools = { path = "../agnt-tools" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "dmn"
path = "src/main.rs"
