[package]
name = "agnt-net"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["doop"]
description = "HTTP backend implementation for the agnt agent runtime — Ollama, OpenAI, Anthropic with streaming and retry."
repository = "https://github.com/hmbldv/agnt"
homepage = "https://github.com/hmbldv/agnt"
documentation = "https://docs.rs/agnt-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["agent", "llm", "ollama", "openai", "anthropic"]
categories = ["api-bindings"]

[lib]
name = "agnt_net"
path = "src/lib.rs"

[dependencies]
agnt-core = { version = "0.3", path = "../agnt-core" }
ureq = { version = "2.12", default-features = false, features = ["json", "native-tls", "gzip"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
