[package]
name = "agnt-toolgnrtr"
version = "0.1.0"
edition = "2021"
description = "Agent tool factory — generate, compile to WASM, and execute via wasmtime"

[lib]
name = "agnt_toolgnrtr"
path = "src/lib.rs"

[[bin]]
name = "toolgnrtr"
path = "src/main.rs"

[dependencies]
agnt-core = { path = "../agnt-core" }
agnt-net = { path = "../agnt-net" }
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = "26"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
agnt-core = { path = "../agnt-core" }
