[package]
name = "agnt-tools"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
authors = ["doop"]
description = "Built-in tools for the agnt agent runtime — filesystem, search, fetch, shell. Sandbox-aware."
repository = "https://github.com/hmbldv/agnt"
homepage = "https://github.com/hmbldv/agnt"
documentation = "https://docs.rs/agnt-tools"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["agent", "llm", "tools"]
categories = ["api-bindings"]

[lib]
name = "agnt_tools"
path = "src/lib.rs"

[features]
default = []
# Shell tool is opt-in — requires explicit sandbox configuration.
# CVE-class capability: read THREAT_MODEL.md before enabling.
shell = []
# v0.3 C1: bubblewrap sandbox for the Shell tool. Linux only.
# Defense in depth on top of the argv allowlist.
bwrap-shell = ["shell"]

[dependencies]
agnt-core = { version = "0.3", path = "../agnt-core" }
ureq = { version = "2.12", default-features = false, features = ["json", "native-tls", "gzip"] }
native-tls = "0.2"
serde_json = "1"
glob = "0.3"
walkdir = "2.5"
regex = "1.10"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
# S1: shell-words for the (opt-in) Shell tool — parses cmd strings into argv
# without invoking sh -c, so there is no command-substitution surface.
shell-words = "1.1"
# S3: url parsing + SSRF guard on Fetch
url = "2.5"
# S6: file locking for EditFile TOCTOU fix
fs2 = "0.4"
