[package]
name = "cc-bridge"
description = "NATS↔Claude Code bridge daemon. One process serves multiple personas (host + cwd + permission_mode); voicectld + other clients dispatch via `cc.dispatch.<persona>`."
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["doop <johnnyendrihs@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hmbldv/voicectl"

[[bin]]
name = "cc-bridge"
path = "src/main.rs"

[lib]
# Library surface exists purely to make config + dispatch + cost-tracker
# unit-testable. The binary just calls into it.
name = "cc_bridge"
path = "src/lib.rs"

[dependencies]
voicectl-core = { path = "../../../../voicectl/main/crates/voicectl-core" }
voicectl-net = { path = "../../../../voicectl/main/crates/voicectl-net" }
async-nats = "0.38"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
